updated image directories

--- a/components/customers-table.pug
+++ b/components/customers-table.pug
@@ -5,7 +5,7 @@
       p.main-content__subtitle Active Members
     .search-bar
       button.search-bar__button 
-        img.search-bar__icon(src="../assets/img/search.svg" alt="search")
+        img.search-bar__icon(src="./assets/img/search.svg" alt="search")
       input.search-bar__input(type="text" placeholder="Search")
   table.customers-table__table.fade-in
     thead.customers-table__head
